[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["David, Chiu <david20571015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
numpy = "^1.22.3"
gym = {extras = ["Box_2D"], version = "^0.23.1"}
pygame = "^2.1.2"
tensorboard = "^2.9.0"
Box2D = "^2.3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.yapf]
based_on_style = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
